--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -12,6 +12,7 @@
     "react-google-autocomplete": "^1.1.2",
     "react-scripts": "3.3.0"
   },
+  "proxy": "https://api.darksky.net",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
