adds start script

--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "main": "index.js",
   "repository": "https://github.com/adammathieson/weather-app-react.git",
   "author": "Adam Mathieson <mathieson1222@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node weather-app/index.js"
+  }
+  
 }
